fix button text color on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,7 @@
             border: none;
             width: 100%;
             height: 100%;
+            color: whitesmoke;
         }
 
         &:first-of-type {
